# unified-crypto-bot

./: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml
src/: config.py  main.py
src/ai/: engine.py  equity_analyst.py  market_analyst.py  prompts.py
src/chart/: generator.py  market_sessions.py
src/clients/: base.py  binance.py  bybit.py  claude.py  coindesk.py  coingecko.py  coinglass.py  elfa.py  hyperliquid.py  polymarket.py  yahoo_finance.py
src/core/: coin_registry.py  database.py  database_positions.py  logging.py  message_utils.py  rate_limiter.py
src/delivery/: alerts.py
src/handlers/: alerts.py  analyze.py  fed.py  freeform.py  headlines.py  market.py  media.py  performance.py  positions.py  price.py  registry.py  script.py  signals.py  social.py  start_help.py  weekly.py
src/modules/: ghost.py  heatmap.py  outcome_tracker.py  position_config.py  position_monitor.py  scheduler.py  social_filter.py
src/webhook/: server.py
